@@ -3,7 +3,8 @@
 
 * Added Archive.delete_properties_by_uuid().
 
-* Added object_acl option to S3 storage backend.
+* Added download_args, upload_args, copy_args, and transfer_config options
+  to S3 storage backend.
 
 5.0 2020-07-30
 ~~~~~~~~~~~~~~
